--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +17,8 @@
         <img id="img2" src="img/dragon.jpg">
         <img id="img3" src="img/unicorn.jpg">
     </section>
+    <button id="popualate"></button>
+    <canvas id="busChart"></canvas>
     <script src="app.js"></script>
     
 </body>
