--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img id="img2" src="img/dragon.jpg">
         <img id="img3" src="img/unicorn.jpg">
     </section>
-    <button id="popualate"></button>
+    <button id="populate"> Get your results!</button>
     <canvas id="busChart"></canvas>
     <script src="app.js"></script>
     
